# epic-doc

./: .gitignore  DESIGN.md  README.md  pyproject.toml
.streamlit/: config.toml
docs/: api.md  cli.md  design.md  index.md  ui.md
examples/: README.md  all_themes_preview.py  basic_report.py  complex_table.py  json_config_example.json  web_demo_case_study_card.json  web_demo_config_example.json  web_demo_full_clone.json  with_charts.py  with_flowchart.py
src/epic_doc/: __init__.py  builder.py  cli.py  schema.py
src/epic_doc/converters/: __init__.py  pandoc.py
src/epic_doc/elements/: __init__.py  chart.py  diagram.py  image.py  layout.py  table.py  text.py
src/epic_doc/markdown/: __init__.py  convert.py
src/epic_doc/styles/: __init__.py  theme.py
src/epic_doc/styles/presets/: __init__.py  academic.py  cherry.py  elegant.py  forest.py  minimal.py  nordic.py  ocean.py  professional.py  ruby.py  sunset.py  tech.py
src/epic_doc/utils/: __init__.py  tempfiles.py  xml_helpers.py
src/epic_doc/validation/: __init__.py  schema_v1.py  validator.py
tests/: conftest.py  test_builder.py  test_chart.py  test_converters_and_diagrams.py  test_fonts_cjk.py  test_schema.py  test_schema_v1.py  test_table.py  test_themes.py  test_toc_depth.py  test_validate_paths.py
web/: streamlit_app.py
