[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epic-doc"
version = "0.1.0"
description = "Generate complex, beautiful DOCX documents programmatically"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Grant-Huang", email = "jacer.huang@gmail.com" }]
keywords = ["docx", "word", "document", "report", "generator", "template"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "python-docx>=1.1",
    "matplotlib>=3.8",
    "graphviz>=0.20",
    "click>=8.0",
    "lxml>=5.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
epic-doc = "epic_doc.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/epic_doc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
